# QwenCraft

./: .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
bot/: package-lock.json  package.json  tsconfig.json
bot/data/odyssey/: README.md  func.json  map_name.json
bot/src/: config.ts  index.ts  logger.ts  mineflayer-plugins.d.ts  observation.ts  reflexes.ts  types.ts  utils.ts  validation.ts  viewer.ts
bot/src/tools/: attack.ts  build_shelter.ts  chat.ts  craft.ts  eat.ts  equip.ts  explore.ts  flee.ts  goto.ts  helpers.ts  index.ts  mine_block.ts  note.ts  obtain_item.ts  odyssey_data.ts  place_block.ts  set_goal.ts  sleep.ts  smelt.ts  stop.ts
bot/test/: attack.test.ts  build_shelter.test.ts  craft.test.ts  equip.test.ts  flee.test.ts  helpers.test.ts  mine_block.test.ts  observation.test.ts  obtain_item.test.ts  ws_protocol.test.ts
brain/: __init__.py  curriculum.py  llm.py  longterm.py  main.py  memory.py  mock_llm.py  models.py  prompts.py  records.py
brain/tests/: test_critic.py  test_curriculum.py  test_export_sft.py  test_hardening.py  test_interrupts.py  test_logging.py  test_longterm.py  test_loop_breaker.py  test_memory.py  test_pending_craft.py  test_records.py  test_xml_parser.py
doc/: goals.md  handoff-gpt55.md  handoff-gpt56.md  log.md
eval/: export_sft.py  run_episode.py
schemas/: observation.schema.json  tools.schema.json
