[project]
name = "qwencraft"
version = "0.1.0"
description = "LLM-driven Minecraft survival agent brain and eval tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.24.0",
  "openai>=1.91.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "websockets>=15.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["brain/tests"]
pythonpath = ["."]

